--- a/src/shared/menu/menu.component.scss
+++ b/src/shared/menu/menu.component.scss
@@ -66,7 +66,19 @@
   }
 
   .icon-wrapper {
-    width: 40px;
+    width: 64px;
+
+    .menu-icon {
+      &.connected {
+        mat-icon {
+          line-height: 40px;
+        }
+      }
+    }
+
+    mat-icon {
+      line-height: 64px;
+    }
   }
 
   .menu-icon {
